<resources>
    <string name="app_name">TestChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again</string>
    <string name="str_number">Номер телефона</string>
    <string name="str_get_code">Получить код</string>
    <string name="str_all_right">Все верно</string>
    <string name="str_change">Изменить</string>
    <string name="str_number_correctly">Правильно ли указан номер?</string>
    <string name="str_error_phone_format">Неверный формат номера</string>
    <string name="str_name">Name</string>
    <string name="str_user_name">User name</string>
    <string name="str_signin">SignIn</string>
    <string name="str_error_auth_code">Введенный код не верный</string>
    <string name="str_edit_profile">Редактировать профиль</string>

    <string name="str_invalid_number">Invalid phone number. It should be 13 characters long.</string>
    <string name="str_invalid_name">Name cannot be empty.</string>
    <string name="str_invalid_username">Username must contain only letters, numbers, and -_ characters.</string>



    <string name="str_profile_avatar">User Avatar</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_username">Username</string>
    <string name="str_city">City</string>
    <string name="str_birthday">Birthday</string>
    <string name="str_zodiac_sign">Zodiac Sign</string>
    <string name="str_about">About</string>
    <string name="str_vk">VK</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_status">Status</string>
    <string name="str_upload_avatar">Upload Avatar</string>
    <string name="str_save_profile">Save Profile</string>
    <string name="str_success_edit">Данные успешно сохранены</string>
</resources>