<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:gravity="center"
    android:layout_marginTop="20dp"
    tools:context=".ui.profile.ui.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/ed_bg_selector"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        
        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

      
        <EditText
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_username"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

     
        <EditText
            android:id="@+id/ed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:digits="0123456789."
            android:hint="YYYY.MM.DD"
            android:importantForAccessibility="yes"
            android:inputType="datetime"
            android:maxLength="10"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

     
        <EditText
            android:id="@+id/ed_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_city"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

      
        <EditText
            android:id="@+id/ed_vk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_vk"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

       
        <EditText
            android:id="@+id/ed_inst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_instagram"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

       
        <EditText
            android:id="@+id/ed_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ed_bg_selector"
            android:padding="12dp"
            android:hint="@string/str_status"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

      
        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text=""
            android:textColor="@color/error"
            android:textSize="14sp"
            android:visibility="gone" />

      
        <TextView
            android:id="@+id/txt_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/str_success_edit"
            android:textColor="#19F40A"
            android:textSize="14sp"
            android:visibility="gone" />

       
        <Button
            android:id="@+id/btn_upload_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@null"

            android:background="@drawable/btn_selector"
            android:text="@string/str_upload_avatar"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

     
        <RelativeLayout
            android:id="@+id/cont_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:translationZ="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/btn_selector"
                android:text="@string/str_edit_profile"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
