<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ui.SigninFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/cont_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:gravity="center"
            android:orientation="horizontal">


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false" />

            <EditText
                android:id="@+id/ed_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_number"
                android:inputType="phone"
                android:maxLength="20"
                android:paddingStart="16dp"
                android:paddingTop="14dp"
                android:paddingEnd="16dp"
                android:paddingBottom="14dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/str_name"/>



        <EditText
            android:id="@+id/ed_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/str_user_name"/>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_signin"/>

    </LinearLayout>


</RelativeLayout>